--- a/conf/spark.conf
+++ b/conf/spark.conf
@@ -11,14 +11,14 @@ hibench.yarn.executor.num     2
 hibench.yarn.executor.cores   4
 
 # executor and driver memory in standalone & YARN mode
-spark.executor.memory  4g
-spark.driver.memory    4g
+# spark.executor.memory  4g
+# spark.driver.memory    4g
 
 # set spark parallelism property according to hibench's parallelism value
-spark.default.parallelism     ${hibench.default.map.parallelism}
+# spark.default.parallelism     ${hibench.default.map.parallelism}
 
 # set spark sql's default shuffle partitions according to hibench's parallelism value
-spark.sql.shuffle.partitions  ${hibench.default.shuffle.parallelism}
+# spark.sql.shuffle.partitions  ${hibench.default.shuffle.parallelism}
 
 #======================================================
 # Spark Streaming
